# aegis

./: .env.example  .env.production  .eslintrc.json  .gitignore  AEGIS_BUILD_PLAN.md  AEGIS_DESIGN_DIRECTION.md  AEGIS_TECHNICAL_REPORT.md  APPLY_0006_REVIEW.md  AUTH_AUDIT.md  BACKEND_BACKLOG.md  BACKEND_VERIFICATION.md  BUILD_NOTES_PDF.md  CHANGELOG.md  CIPHER2_theametuers_Documentation.html  CLAUDE.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  FRONTEND_SESSION_REPORT.md  KICKOFF.md  LICENSE  MOCK_DATA_INTEGRATION_README.md  PITCH_READY_CHECKLIST.md  POLISH_REPORT.md  PRODUCT.md  PUBLICATION_CHECKLIST.md  README.md  REMAINING_WORK_PLAN.md  RLS_VERIFICATION.md  SECURITY_REVIEW.md  SIGNIN_REDESIGN_NOTES.md  WHATS_LEFT.md  aegis-platform-v2.html  architecture.md  deployment.md  lms_raw_export.csv  module_skill_mapping.csv  package.json  pnpm-lock.yaml  pyproject.toml  railway.toml  (+5 more)
.claude/: code-auditor.md  security-auditor.md  settings.json
aegis/: __init__.py
aegis/adapters/: __init__.py  repo_db.py  repo_mock.py  repo_seed.py
aegis/api/: __init__.py  (+2 more)
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
components/: dashboard.tsx  student-workspace.tsx
docs/: AEGIS_Integration_Setup_Guide.md  AEGIS_Policies_v2.md  AEGIS_README_v3.md
gates/: PHASE_0.md  PHASE_D.md
lib/: api.ts  format.ts  labels.ts  safe-redirect.test.mjs  safe-redirect.ts  utils.ts
scripts/: backup_db.py  cc-audit.sh  drive_check_scopes.mjs  drive_smoke_test.mjs  drive_throwaway_test.mjs  google_oauth_setup.mjs  load_supabase.py
supabase/: README.md  verify_governance.sql
(+53 files in other folders)
